[gd_scene load_steps=6 format=3 uid="uid://jumplanesprototype"]

[ext_resource type="Script" path="res://src/app/jumplanes_prototype/JumpLanesPrototype.gd" id="1_main"]
[ext_resource type="Script" path="res://src/app/jumplanes_prototype/JumpLaneRenderer.gd" id="2_renderer"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.05, 0.05, 0.15, 1)
sky_horizon_color = Color(0.1, 0.1, 0.2, 1)
ground_bottom_color = Color(0.02, 0.02, 0.05, 1)
ground_horizon_color = Color(0.1, 0.1, 0.2, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.3, 0.4, 1)

[node name="JumpLanesPrototype" type="Node3D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 10, 10, 10)
light_energy = 0.5

[node name="JumpLaneRenderer" type="Node3D" parent="."]
script = ExtResource("2_renderer")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40)
fov = 50.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_right = 220.0
offset_bottom = 400.0

[node name="VBox" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Jump Lanes Prototype"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="RegionLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Region Type:"

[node name="RegionOption" type="OptionButton" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="SeedContainer" type="HBoxContainer" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="SeedLabel" type="Label" parent="UI/Panel/VBox/SeedContainer"]
layout_mode = 2
text = "Seed:"

[node name="SeedInput" type="SpinBox" parent="UI/Panel/VBox/SeedContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GenerateButton" type="Button" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Generate"

[node name="HSeparator2" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Stats loading..."

[node name="HSeparator3" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="LegendLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Legend loading..."
